# palari-company-os

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  pages.yml  release.yml
docs/agent/: common-workflows.md  contracts-and-invariants.md  documentation-freshness.md  repo-map.md  verification.md
docs/archive/plans/: demo-recording-script.md
docs/plans/: demo-recording-script.md  launch-quality-plan.md
docs/product/: agent-company-landscape.md  agent-contract.md  agent-loop-smoke.md  agent-ready-repo-documentation.md  ai-ops-memory-roadmap-review.md  approval-packs-and-checkpoints-contract.md  authority-and-gates.md  claude-code-integration.md  command-reference.md  compact-journal-v2-contract.md  company-os.md  competitive-landscape.md  contributing.md  core-objects.md  current-product-recovery-inventory.md  current-product.md  desktop-app-data-contract.md  deterministic-agent-advance-contract.md  external-maintainer-mode.md  git-for-ai-work.md  glossary.md  golden-path-repair-contract.md  governance-hardening-contract.md  governance-hardening-review.md  invisible-adoption-foundation-contract.md  invisible-governance-convergence-contract.md  invisible-operator-loop-contract.md  invisible-product-surface-contract.md  kilo-code-integration.md  lifecycle-guide.md  linear-operating-loop.md  milestone-completion-report.md  minimality-contract.md  opaque-concurrent-work-contract.md  palari-blueprint.md  playbooks.md  portable-agent-session-contract-compiler-contract.md  presentation-bound-human-decisions-contract.md  proof-carrying-governance-contract.md  public-surface.md  (+11 more)
docs/research/: gpt-5-5-pro-agent-packet-critique-2026-06-21.md
docs/showcase/: ai-work-vignettes.md
examples/acme-company-os/: README.md  workspace.json
schemas/: workspace.schema.json
scripts/: approval_pack_measure.py  check_style.py  install_smoke.sh  kilo_real_smoke.sh  make_demo_assets.sh  parallel_unittest.py  pcaw_demo.sh  run_desktop_kilo_app.sh  update_pcaw_tcb.py  verification_profiles.py  verify.sh
spec/pcaw/v1/: README.md  conformance.py  statement.schema.json  trusted-code.json  verification-result.schema.json
spec/pcaw/v1/vectors/: manifest.json
spec/pcaw/v1/vectors/invalid/altered-contract/: statement.json
spec/pcaw/v1/vectors/invalid/ambiguous-timestamp/: statement.json
spec/pcaw/v1/vectors/invalid/builder-reviewer-collision/: statement.json
spec/pcaw/v1/vectors/invalid/contradictory-decision/: statement.json
spec/pcaw/v1/vectors/invalid/duplicate-key/: statement.json
spec/pcaw/v1/vectors/invalid/evidence-subject-mismatch/: statement.json
spec/pcaw/v1/vectors/invalid/journal-corruption/: statement.json
spec/pcaw/v1/vectors/invalid/missing-subject/: README.txt
spec/pcaw/v1/vectors/invalid/noncanonical/: statement.json
src/palari_company_os/: __init__.py  agent_adoption.py  agent_advance.py  agent_checks.py  agent_directive.py  agent_doctor.py  agent_done.py  agent_file_changes.py  agent_finish.py  agent_handoff.py  agent_isolation.py  agent_loop.py  agent_next.py  agent_operation.py  agent_packets.py  agent_parking.py  agent_runtime.py  agent_session_contract.py  approval_packs.py  approval_presentations.py  authoring.py  authority.py  capabilities.py  checkpoints.py  claude_hooks.py  cli.py  cli_dispatch.py  cli_output.py  cli_output_agent.py  cli_output_integrations.py  cli_output_utils.py  cli_parser.py  cursor_rules.py  dashboard.py  dashboard_assets.py  data_map.py  decision_guides.py  demo.py  desktop_prototype.py  desktop_prototype_assets.py  (+47 more)
src/palari_company_os/data/examples/acme-company-os/: README.md  workspace.json
src/palari_company_os/data/examples/desktop-demo/: workspace.json
src/palari_company_os/data/schemas/: workspace.schema.json
tests/: test_agent_adoption.py  test_agent_advance.py  test_agent_done.py  test_agent_file_changes.py  test_agent_packets.py  test_agent_session_contract.py  test_approval_packs.py  test_approval_presentations.py  test_canonical_json.py  test_claude_hooks.py  test_cli_smoke.py  test_cursor_rules.py  test_dashboard.py  test_data_map.py  test_decision_guides.py  test_demo.py  test_desktop_kilo_browser.py  test_desktop_prototype.py  test_docs.py  test_filesystem_security.py  test_gate_profiles.py  test_git_hooks.py  test_governance_completion.py  test_governance_explorer.py  test_governance_journal.py  test_governance_journal_crash.py  test_governance_kernel.py  test_history.py  test_integrations.py  test_kilo_integration.py  test_linear_adapter.py  test_linear_webhook.py  test_mcp_server.py  test_mission_control.py  test_one_action_convergence.py  test_onramp.py  test_operator_journeys.py  test_packaging.py  test_path_policy.py  test_pcaw_protocol.py  (+12 more)
tests/fixtures/: public_commands.txt
tests/fixtures/workspaces/: broken-reference.json  invalid-completed-work.json  invalid-human-approval-capability.json  invalid-lifecycle-state.json  invalid-receipt-actor.json  invalid-receipt-external-write.json  invalid-receipt-missing-source.json  invalid-receipt-unallowed-source.json  invalid-source-missing-palari.json  stale-evidence.json  stale-review.json  unknown-field.json  unsupported-schema-version.json  valid-accepted-completed-work.json  valid-source-receipt-loop.json  valid-workspace.json
tests/fixtures/workspaces/split-workspace/: workspace.json
tests/fixtures/workspaces/split-workspace/records/: work-items.json
workspaces/palari-company-os/: README.md  workspace.json
workspaces/palari-company-os/.palari/: governance-journal.v1.jsonl  history.jsonl
(+9 files in other folders)
