[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "palari-company-os"
version = "0.1.1"
description = "Queue-first operating layer for AI-assisted company work."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "CoyStan"}]
keywords = ["ai", "company-os", "governance", "workflow", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Systems Administration",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.9",
]

[project.scripts]
palari = "palari_company_os.cli:main"

[project.urls]
Homepage = "https://github.com/CoyStan/palari-company-os"
Repository = "https://github.com/CoyStan/palari-company-os"
Issues = "https://github.com/CoyStan/palari-company-os/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
palari_company_os = [
    "py.typed",
    "data/examples/acme-company-os/*.json",
    "data/examples/acme-company-os/*.md",
    "data/examples/desktop-demo/*.json",
    "data/schemas/*.json",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
per-file-ignores = {"tests/*.py" = ["E402"]}
